deliting search tabs

--- a/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/search.html.twig
@@ -148,7 +148,7 @@
                 <h1>Artists Matching Your Criteria</h1>
 
                 <ul class="results-menu ul-reset">
-                    <li data-toggle="#tab-rec" class="tab recommendations active">
+                    <li data-toggle="#tab-rec" class="tab recommendations recommendedTab active">
                         <a>Recommendations</a>
                     </li>
                 </ul>
