--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -2176,3 +2176,13 @@ span.removeNewImage
 {
     opacity: 0.5;
 }
+.deleteTabBlock
+{
+    position: absolute;
+    right: -1px;
+    top: -13px;
+    color: #f97c7d;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 2;
+}
