--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -6541,3 +6541,13 @@ span.removeNewImage
 {
     opacity: 0.5;
 }
+.deleteTabBlock
+{
+    position: absolute;
+    right: -1px;
+    top: -13px;
+    color: #f97c7d;
+    font-size: 24px;
+    cursor: pointer;
+    z-index: 2;
+}
