--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -1,4 +1,10 @@
 {% include 'ActedLegalDocsBundle:Default:header.html.twig' %}
+{% for flashMessage in app.session.flashbag.get('success') %}
+    <div class="success">{{ flashMessage }}</div>
+{% endfor %}
+{% for flashMessage in app.session.flashbag.get('error') %}
+    <div class="error">{{ flashMessage }}</div>
+{% endfor %}
 
 <div class="home header-background">
     <div class="video" id="videoBackgroundPlayer" data-property="{videoURL:'https://youtu.be/Ytiy96BShD8',containment:'body', loop:true, autoPlay:true, mute:true, startAt:0, opacity:1, showControls: false}">
