--- a/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Email/create_event_notify.html.twig
@@ -52,7 +52,7 @@
             You can reply instantly to this enquiry, or message me through our
             <a href="{{ url('acted_legal_docs_homepage') }}">chatroom</a>.
             If you are not available, you just need to
-            <a href="{{ url('acted_legal_docs_homepage') }}">click here</a>. </p>
+            <a href="{{ url('reject_offer', {'id': offer.id}) }}">click here</a>. </p>
         <p>Many thanks & kind regards,</p>
         <p>{{ event.user.firstname }}</p>
     {% endautoescape %}
