--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ app.request.getSchemeAndHttpHost() }}"><img src="{{ asset('assets/images/ACTED.png') }}" alt=""></a>
+                <a class="navbar-brand" href="{{ app.request.getSchemeAndHttpHost() }}"><img src="{{ asset('assets/images/logo.png') }}" alt=""></a>
 
                 {% if app.user %}
                 <div class="profile-dropdown dropdown">
