--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/userSection.html.twig
@@ -85,7 +85,7 @@
             </div>
 
             <div class="button-gradient filled">
-                <button class="btn">REQUEST FREE QUOTE</button>
+                <button data-toggle="modal" data-target="#freeQuoteModal" class="btn">REQUEST FREE QUOTE</button>
             </div>
         </div>
     </section>
