--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
@@ -95,18 +95,12 @@
                         <div class="col-lg-6 form-group">
                             <label class="col-xs-12 no-pad" for="event_type">Event type</label>
                             <select data-class="selections-white" name="event_type" id="event_type">
-                                <option value="0">Corporate event</option>
-                                <option value="1">Lorem Ipsum 1</option>
-                                <option value="2">Lorem Ipsum 2</option>
                             </select>
                         </div>
 
                         <div class="col-lg-6 form-group">
                             <label class="col-xs-12 no-pad" for="venue_type">Venue type</label>
                             <select data-class="selections-white" name="venue_type" id="venue_type">
-                                <option value="0">Hotel Ballroom</option>
-                                <option value="1">Lorem Ipsum 1</option>
-                                <option value="2">Lorem Ipsum 2</option>
                             </select>
                         </div>
 
@@ -137,64 +131,16 @@
                 </div>
                 <div class="modal-footer">
                     <div class="col-lg-12">
-                        <div class="col-lg-12 no-pad">
-                            <img class="quote-profile-avatar" src="assets/images/avatar.jpg" alt="avatar"/>
+                        <div class="col-lg-12 no-pad quoteRequestArtistData">
+                            <img class="quote-profile-avatar avatar" src="" alt="avatar"/>
 
                             <div class="quote-profile-info">
-                                <h2>Diana Krall</h2>
-                                <p>Jazz Vocalist, Jazz Pianist, Song Writer, Lorem Ipsum, Lorem Ipsum, Lorem Ipsum</p>
+                                <h2></h2>
+                                <p></p>
                             </div>
                         </div>
 
-                        <ul class="profile-categories ul-reset">
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_1" type="checkbox">
-                                    <label for="checkbox_1">Comedy Acts long</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_2" type="checkbox">
-                                    <label for="checkbox_2">Comedy Acts very long</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_3" type="checkbox">
-                                    <label for="checkbox_3">Not so long but still</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_4" type="checkbox">
-                                    <label for="checkbox_4">Short</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_5" type="checkbox">
-                                    <label for="checkbox_5">Less Shorty</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_6" type="checkbox">
-                                    <label for="checkbox_6">Beautiful Acts</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_7" type="checkbox">
-                                    <label for="checkbox_7">Singers</label>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="custom-checkbox">
-                                    <input id="checkbox_8" type="checkbox">
-                                    <label for="checkbox_8">Night Dancers</label>
-                                </div>
-                            </li>
+                        <ul class="profile-categories requestQuotePerformances ul-reset">
                         </ul>
 
                         <div class="row add-comment-btn">
