--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/modals.html.twig
@@ -62,34 +62,48 @@
                     Tip: Enter your event details below and it will automatically apply to your next quote requests
                 </h4>
             </div>
-            <form>
+            <form id="requestQuoteForm">
                 <div class="modal-body">
 
                     <div class="row clearfix">
 
                         <div class="col-lg-12 form-group">
                             <label for="event_name">Name your event</label>
-                            <input type="text" class="form-control" id="event_name" placeholder="Name your event">
+                            <input type="text" class="form-control" id="event_name" placeholder="Name your event" name="name">
                         </div>
 
                         <div class="col-lg-6 form-group">
                             <label for="event_date">Date</label>
-                            <input type="text" class="form-control" id="event_date" placeholder="05/04/2016">
+                            <input type="text" class="date-picker form-control" id="event_date" name="event_date">
+                        </div>
+
+                        <div class="col-lg-6 form-group">
+                            <label for="event_country">Country</label>
+                            <select data-class="selections-white" name="event_country" id="event_country">
+                                {% for country in countries() %}
+                                    {% if country.name == 'United Kingdom' %}
+                                        <option value="{{ country.id }}" name="event_country" selected="selected">{{ country.name }}</option>
+                                    {% else %}
+                                        <option value="{{ country.id }}" name="event_country">{{ country.name }}</option>
+                                    {% endif %}
+                                {% endfor %}
+                            </select>
                         </div>
 
                         <div class="col-lg-6 form-group">
                             <label for="event_city">City</label>
-                            <input type="text" class="form-control" id="event_city" placeholder="London">
+                            <select name="city" id="event_city">
+                            </select>
                         </div>
 
                         <div class="col-lg-6 form-group">
                             <label for="event_time">Time</label>
-                            <input type="text" class="form-control" id="event_time" placeholder="Evening">
+                            <input type="text" class="form-control" id="event_time" placeholder="Evening" name="event_time">
                         </div>
 
                         <div class="col-lg-6 form-group">
                             <label for="event_location">Location</label>
-                            <input type="text" class="form-control" id="event_location" placeholder="Event location">
+                            <input type="text" class="form-control" id="event_location" placeholder="Event location" name="location">
                         </div>
 
                         <div class="col-lg-6 form-group">
@@ -108,19 +122,19 @@
                             <label class="col-xs-12 no-pad">Number of guests</label>
 
                             <div class="custom-checkbox">
-                                <input id="count_1" name="guests_count" type="radio">
+                                <input id="count_1" name="guests_count" type="radio" value="less_then_50">
                                 <label for="count_1">Less than 50</label>
                             </div>
                             <div class="custom-checkbox">
-                                <input id="count_2" name="guests_count" type="radio">
+                                <input id="count_2" name="guests_count" type="radio" value="50-100">
                                 <label for="count_2">50-100</label>
                             </div>
                             <div class="custom-checkbox">
-                                <input id="count_3" name="guests_count" type="radio">
+                                <input id="count_3" name="guests_count" type="radio" value="100-500">
                                 <label for="count_3">100-500</label>
                             </div>
                             <div class="custom-checkbox">
-                                <input id="count_4" name="guests_count" type="radio">
+                                <input id="count_4" name="guests_count" type="radio" value="500+">
                                 <label for="count_4">500+</label>
                             </div>
                         </div>
@@ -148,12 +162,12 @@
                         </div>
 
                         <div class="col-lg-12 no-pad" id="comment_area" style="display: none">
-                            <textarea name="quote-profile-desc" class="quote-profile-desc" placeholder="Write a message to the Artist if you have any question about his performance or if you want to provide with more details about your event"></textarea>
+                            <textarea name="comment" class="quote-profile-desc" placeholder="Write a message to the Artist if you have any question about his performance or if you want to provide with more details about your event"></textarea>
                         </div>
 
                         <div class="controls">
                             <div class="button-gradient filled">
-                                <button class="btn">Send</button>
+                                <button class="btn" id="quoteRequsetSend">Send</button>
                             </div>
                         </div>
                     </div>
